[package]
name = "showfa"
version = "0.1.0"
authors = ["Yu Chen <yuchen@tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "0.6.9"
nom = "5.0"
bitset = { git = "https://github.com/MashPlant/bitset" }
re2dfa = { git = "https://github.com/MashPlant/re2dfa" }
clap = "2.33.0"
